--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ endif()
 
 if (CMAKE_SYSTEM_NAME STREQUAL "NintendoSwitch")
     include(cmake/dependencies/switch.cmake)
+    include(cmake/dependencies/linux.cmake)
 endif()
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
